--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "djangoProject",
-        "use": "@vercel/python"
-      }
-    ],
+    "builds": [{
+        "src": "djangoProject/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    }],
     "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/djangoProject/static/$1"
-      },
-      {
-        "src": "/media/(.*)",
-        "dest": "/djangoProject/media/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/djangoProject/wsgi.py"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "djangoProject/wsgi.py"
+        }
     ]
-  }
-  
+}
