--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,27 @@
 {
-    "builds": [{
+    "version": 2,
+    "builds": [
+      {
         "src": "djangoProject/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
-    
-    "version": 2,
+      },
+      {
+        "src": "build.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
+      }
+    ],
     "routes": [
       {
         "src": "/static/(.*)",
-        "dest": "/djangoProject/static/$1"
-      },
-      {
-        "src": "/media/(.*)",
-        "dest": "/djangoProject/media/$1"
+        "dest": "/static/$1"
       },
       {
         "src": "/(.*)",
-        "dest": "/djangoProject/wsgi.py"
+        "dest": "djangoProject/wsgi.py"
       }
     ]
-
-
-}
+  }
